[package]
name = "wasmer-middlewares"
version = "2.0.0"
authors = ["Wasmer Engineering Team <engineering@wasmer.io>"]
description = "A collection of various useful middlewares"
license = "MIT OR Apache-2.0 WITH LLVM-exception"
categories = ["wasm"]
keywords = ["webassembly", "wasm"]
repository = "https://github.com/wasmerio/wasmer"
readme = "README.md"
edition = "2018"

[features]
default = ["compiler"]
compiler = ["wasmer/compiler"]

[dependencies]
wasmer = { path = "../api", version = "2.0.0", default-features = false }
wasmer-types = { path = "../types", version = "2.0.0" }
wasmer-vm = { path = "../vm", version = "2.0.0" }
loupe = "0.1"

[dev-dependencies]
wasmer = { path = "../api", version = "2.0.0", default-features = false, features = ["universal", "cranelift", "wat"] }

[badges]
maintenance = { status = "actively-developed" }
